test: making app work on testflight

--- a/app.json
+++ b/app.json
@@ -13,7 +13,8 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.henrikcatch.CatchCue"
+      "bundleIdentifier": "com.henrikcatch.CatchCue",
+      "buildNumber": "5"
     },
     "android": {
       "adaptiveIcon": {
