--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "CatchCue",
     "slug": "CatchCue",
-    "version": "1.0.0",
+    "version": "2.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -14,13 +14,14 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.henrikcatch.CatchCue",
-      "buildNumber": "5"
+      "buildNumber": "2"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.henrikcatch.CatchCue"
     },
     "web": {
       "favicon": "./assets/favicon.png"
