--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -16,10 +16,10 @@
     "@react-navigation/native-stack": "^6.11.0",
     "axios": "^1.7.3",
     "expo": "~51.0.26",
-    "expo-constants": "^16.0.2",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-animated-numbers": "^0.6.2",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1"
   },
